# ros2-basico

./: calculator_server.py  radio_do_interior_node.py  radio_educadora_node.py  radiostationam.py  setup.py
calculator/: calculator_client.py
nodes-main/my_py_pkg/: package.xml  setup.py
nodes-main/my_py_pkg/my_py_pkg/: my_first_node.py  radiostation.py
nodes-sem-pacote/calculator/: calculator_client.py
radio-station/: radio_do_interior_node.py  radio_educadora_node.py  radioreceiver.py  radiostationfm.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_py_pkg/lib/my_py_pkg/: basic_calculator  terminal_node
ros2_ws/install/my_py_pkg/share/my_py_pkg/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/my_py_pkg/share/my_py_pkg/srv/: CalcService.srv
ros2_ws/log/: latest_build
ros2_ws/src/basic_calculator_package/: CMakeLists.txt  package.xml
ros2_ws/src/my_py_pkg/: basic_calculator.py  setup.py  terminal.py
trabalho final/: basic_calculator.py  package no local.txt  terminal.py
