<?xml version="1.0"?>
<package format="3">
  <name>my_py_pkg</name>
  <version>0.0.0</version>
  <description>Basic Calculator Service Package</description>
  <maintainer email="gabiecarvalho15@gmail.com">gabi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
